# xpand

./: .gitignore
src/: cli.rs  crypto.rs  lib.rs  loading_bar.rs  mapper.rs  secrets.rs  version.rs
src/secrets/: token
xpand/: .gitignore  Cargo.toml  README.md
xpand/src/: bot.rs  cli.rs  crypto.rs  lib.rs  loading_bar.rs  log.rs  main.rs  mapper.rs  secrets.rs  segment.rs
xpand/tests/: segment.rs
