[package]
name = "xpand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
# git2 = "0.18.1"
crypto = "0.5.1"
rand = "0.8.5"
base64 = "0.21.5"
sha2 = "0.10.8"
aes-gcm = "0.10.3"
serde = { version = "1.0.193", features = [ "derive" ] }
bincode = "1.3.3"
crossterm = "0.27.0"

[dependencies.serenity]
version = "0.12.0"
default-features = false
features = ["client", "gateway", "http", "model", "utils", "rustls_backend"]

[profile.dev]
incremental = true
debug = false

[profile.dev.package."*"]
opt-level = 3